--- a/package.json
+++ b/package.json
@@ -49,17 +49,18 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "eslint-config-next": "16.1.1",
     "firebase": "^11.9.1",
     "framer-motion": "^11.2.10",
     "genkit": "^1.14.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "16.1.1",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "19.2.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
@@ -68,15 +69,17 @@
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/typography": "^0.5.13",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@types/recharts": "^1.8.29",
+    "eslint": "^8.57.1",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
