Improvments/Phase2 - 2.5: Implement Streaming SSR with Suspense & gitignore update

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "16.1.1",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^11.2.10",
     "genkit": "^1.14.1",
     "js-cookie": "^3.0.5",
@@ -67,6 +68,7 @@
     "react-resizable-panels": "^2.0.19",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.2.1"
