--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.19",
+    "react-virtuoso": "^4.18.0",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
